chromeos: Makes ~QuickLaunch delete widgets

BUG=692324
TEST=none
R=erg@chromium.org

Review-Url: https://codereview.chromium.org/2691363004
Cr-Commit-Position: refs/heads/master@{#450815}

Former-commit-id: 32e074e42207bf161510aba4c4b5539d0818d2f1